Memorials, UUID based player memory, couple of fixes